Prevent result label mis-alignment

--- a/envergo/static/sass/project.scss
+++ b/envergo/static/sass/project.scss
@@ -115,6 +115,7 @@ section.regulation {
 
     span.content {
       margin-right: .5em;
+      white-space: nowrap;
     }
 
     span.fr-tag {
